index.js calls tokenizer, which currently only splits into words at space characters and returns array of words.

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/jenwill/vis-prototype/issues"
   },
-  "homepage": "https://github.com/jenwill/vis-prototype#readme"
+  "homepage": "https://github.com/jenwill/vis-prototype#readme",
+  "dependencies": {
+    "eslint": "^5.2.0"
+  }
 }
